<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="startFragment"
            type="com.manishsputnikcorporation.pizza.ui.StartFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/side_margin">

            <ImageView
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:importantForAccessibility="no"
                android:scaleType="center"
                app:srcCompat="@drawable/pizza" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/side_margin"
                android:text="@string/order_pizzas"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textColor="@color/material_on_background_emphasis_medium" />

            <Button
                android:id="@+id/order_one_pizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:minWidth="@dimen/order_pizza_button_width"
                android:onClick="@{() -> startFragment.orderPizza(1)}"
                android:text="@string/one_pizza" />

            <Button
                android:id="@+id/order_six_pizzas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:minWidth="@dimen/order_pizza_button_width"
                android:onClick="@{() -> startFragment.orderPizza(6)}"
                android:text="@string/six_pizzas" />

            <Button
                android:id="@+id/order_twelve_pizzas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:minWidth="@dimen/order_pizza_button_width"
                android:onClick="@{() -> startFragment.orderPizza(12)}"
                android:text="@string/twelve_pizzas" />
        </LinearLayout>
    </ScrollView>
</layout>