<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.manishsputnikcorporation.pizza.ui.model.OrderViewModel" />

        <variable
            name="summaryFragment"
            type="com.manishsputnikcorporation.pizza.ui.SummaryFragment" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/side_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/quantity_label"
                    style="@style/Widget.Pizza.TextView.OrderSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                    android:textAllCaps="true"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/quantity"
                    style="@style/Widget.Pizza.TextView.OrderSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/order_summary_margin"
                    android:text="@{viewModel.quantity.toString()}"
                    tools:text="6 pizzas" />

                <View
                    android:id="@+id/divider1"
                    style="@style/Widget.Pizza.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/side_margin"
                    android:layout_marginBottom="@dimen/side_margin" />

                <TextView
                    android:id="@+id/pizza_label"
                    style="@style/Widget.Pizza.TextView.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:pizzaLabel="@{ viewModel.pizzas }"
                    tools:text="@string/pizza" />

                <TextView
                    android:id="@+id/pizza"
                    style="@style/Widget.Pizza.TextView.OrderSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/order_summary_margin"
                    app:pizzaFormatted="@{ viewModel.pizzas }"
                    tools:text="Chocolate" />

                <View
                    android:id="@+id/divider2"
                    style="@style/Widget.Pizza.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/side_margin"
                    android:layout_marginBottom="@dimen/side_margin" />

                <TextView
                    android:id="@+id/pickup_label"
                    style="@style/Widget.Pizza.TextView.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pickup_date" />

                <TextView
                    android:id="@+id/date"
                    style="@style/Widget.Pizza.TextView.OrderSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/order_summary_margin"
                    android:text="@{viewModel.date}"
                    tools:text="Sunday" />

                <View
                    android:id="@+id/divider3"
                    style="@style/Widget.Pizza.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/side_margin"
                    android:layout_marginBottom="@dimen/side_margin" />

                <TextView
                    android:id="@+id/name_label"
                    style="@style/Widget.Pizza.TextView.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/order_summary_margin">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="name"
                        android:hint="@string/name_hint"
                        android:inputType="text"
                        android:onTextChanged="@{(text, start, before, count) -> viewModel.setName(text.toString())}"
                        android:text="@{ viewModel.name }"
                        tools:text="Manuel Espinosa Torres" />

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/divider4"
                    style="@style/Widget.Pizza.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/side_margin"
                    android:layout_marginBottom="@dimen/margin_between_elements" />

                <TextView
                    android:id="@+id/total"
                    style="@style/Widget.Pizza.TextView.FinalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/side_margin"
                    android:text="@{@string/total_price(viewModel.price)}"
                    tools:text="Total $5.00" />

            </LinearLayout>

            <Button
                android:id="@+id/send_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:onClick="@{() -> summaryFragment.sendOrder()}"
                android:text="@string/send" />

            <Button
                android:id="@+id/cancel_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:onClick="@{() -> summaryFragment.cancelOrder()}"
                android:text="@string/cancel" />

        </LinearLayout>
    </ScrollView>
</layout>