<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="pizza"
            type="com.manishsputnikcorporation.pizza.domain.Pizza" />

        <variable
            name="minusClickListener"
            type="com.manishsputnikcorporation.pizza.ui.adapter.MinusButtonListener" />

        <variable
            name="plusClickListener"
            type="com.manishsputnikcorporation.pizza.ui.adapter.PlusButtonListener" />

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@{ pizza.name }"
                tools:text="@string/barbeque_pizza" />

            <Button
                android:id="@+id/minus_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:onClick='@{() -> minusClickListener.onClick(pizza.name) }'
                android:text="@string/minus_button" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                app:quantity="@{ pizza.quantity }"
                tools:text="12" />

            <Button
                android:id="@+id/plus_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:onClick='@{() -> plusClickListener.onClick(pizza.name) }'
                android:text="@string/plus_button" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>
